# subtle-rs

./: .gitignore  .hgignore  Cargo.toml  README.adoc  Taskfile.yml  mise.toml  subtle.toml
plugins/battery/: Cargo.toml  Taskfile.yml
plugins/battery/src/: lib.rs
plugins/fuzzytime/: Taskfile.yml  fuzzytime.go
plugins/mem/: Taskfile.yml
plugins/mem/src/: index.d.ts  index.js
plugins/time/: Taskfile.yml  build.zig  build.zig.zon
plugins/time/src/: time.zig
src/: client.rs  config.rs  display.rs  event.rs  ewmh.rs  flags.rs  font.rs  grab.rs  gravity.rs  icon.rs  logger.rs  main.rs  panel.rs  plugin.rs  rect.rs  screen.rs  spacing.rs  style.rs  subtle.rs  tag.rs  tagging.rs  tray.rs  view.rs
src/tests/: grab_test.rs  gravity_test.rs  mod.rs  rect_test.rs  spacing_test.rs  style_test.rs  tag_test.rs  tagging.rs  view_test.rs
tests/: gravity_test.rs
