[package]
name = "subtle-rs"
version = "0.1.0"
authors = [
    "Christoph Kappel <christoph@unexist.dev>"
]
license-file = "LICENSE"
homepage = "https://unexist.dev"
repository = "https://hg.unexist.dev/subtle-rs"
edition = "2024"
exclude = ["/Taskfile.yml"]

[dependencies]
env_logger = "0.11.8"
log = "0.4.28"
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["derive"] }
clap-config-file = "0.6.0"
serde = { version = "1.0.226", features = ["derive"] }
config = "0.15.16"
bitflags = "2.9.4"
x11rb = { version = "0.13.2", features = ["randr", "xinerama", "xinput", "xkb", "image"] }
x11-keysymdef = "0.2.0"
signal-hook = "0.3.18"
easy-min-max = "1.0.0"
regex = "1.11.2"
once_cell = "1.21.3"
veccell = "0.4.0"
exec = "0.3.1"
stdext = "0.3.3"
struct_iterable = "0.1.1"
hex_color = "3.0.0"
derive_builder = "0.20.2"

[dev-dependencies]
proptest = "1.8.0"
