[package]
name = "subtle-rs"
description = "subtle - the manual grid-tiling window manager"
version = "0.1.0"
authors = [
    "Christoph Kappel <christoph@unexist.dev>"
]
license-file = "LICENSE"
homepage = "https://subtle.rs"
repository = "https://hg.unexist.dev/subtle-rs"
edition = "2024"
include = ["/src", "LICENSE"]

[dependencies]
env_logger = "0.11.8"
log = "0.4.29"
anyhow = "1.0.100"
clap = { version = "4.5.54", features = ["derive"] }
clap-config-file = "0.6.0"
serde = { version = "1.0.228", features = ["derive"] }
config = "0.15.19"
bitflags = "2.10.0"
x11rb = { version = "0.13.2", features = ["randr", "xinerama", "xinput", "xkb", "image"] }
x11-keysymdef = "0.2.0"
signal-hook = "0.4.1"
easy-min-max = "1.0.0"
regex = "1.12.2"
once_cell = "1.21.3"
veccell = "0.4.0"
exec = "0.3.1"
stdext = "0.3.3"
struct_iterable = "0.1.1"
hex_color = "3.0.0"
derive_builder = "0.20.2"
strum_macros = "0.27.2"
extism = { version = "1.13.0", optional = true }
time = { version = "0.3.44", features = ["formatting", "local-offset"], optional = true }

[dev-dependencies]
proptest = "1.9.0"

[features]
default = ["plugins"]
plugins = ["extism", "time"]

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
pedantic = { level = "deny", priority = 1 }
perf = { level = "warn", priority = 2 }
style = { level = "warn", priority = 3 }
complexity = { level = "warn", priority = 4 }

module_name_repetitions = { level = "allow", priority = 20 }
cast_possible_truncation = { level = "allow", priority = 20 }
cast_sign_loss = { level = "allow", priority = 20 }
cast_possible_wrap = { level = "allow", priority = 20 }
cast_precision_loss = { level = "allow", priority = 20 }
missing_errors_doc = { level = "allow", priority = 20 }
similar_names = { level = "allow", priority = 20 }
too_many_lines = { level = "allow", priority = 20 }